--- a/Documents/projects/foodie_fly/android/app/src/main/AndroidManifest.xml
+++ b/Documents/projects/foodie_fly/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="foodie_fly"
+        android:label="Foodie Fly"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
