--- a/Documents/projects/foodie_fly_restaurant/android/app/src/main/AndroidManifest.xml
+++ b/Documents/projects/foodie_fly_restaurant/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     <application
-        android:label="Foodie Fly Restaurant"
+        android:label="Fork Plate Restaurant"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
