--- a/Documents/projects/foodie_fly/android/app/src/main/AndroidManifest.xml
+++ b/Documents/projects/foodie_fly/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="Foodie Fly"
+        android:label="Fork Plate Cleint"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
