--- a/Documents/projects/foodie_fly_restaurant/pubspec.yaml
+++ b/Documents/projects/foodie_fly_restaurant/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.0+1
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -35,12 +35,14 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   omni_datetime_picker: ^1.0.9
+  shimmer: ^2.0.0
   flutter_svg: ^2.0.9
   image_picker: ^1.0.5
   intl: ^0.19.0
   lottie: ^3.1.0
   salomon_bottom_bar: ^3.3.2
   shared_preferences: ^2.2.2
+  flutter_spinkit: ^5.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
